--- a/sign_in.html
+++ b/sign_in.html
@@ -1,16 +1,44 @@
 
 <html>
-<head>
-	
-    
+<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+	<meta name='description' content='Project-1'>
+
+	<title>Home</title>
+
+	<!-- Bootstrap CSS File -->
+	<link href='bootstrap-3.3.1/css/bootstrap.min.css' rel='stylesheet' />
+	<link href='bootstrap-3.3.1/css/bootstrap-theme.min.css' rel='stylesheet' />
+
+	<link href='css/style.css' rel='stylesheet' />
+
 </head>
 
 <body>
 
-	<div id = "sign_in">
-		<form action="" id = "" method = "post">
-			<table border = "0" cellpadding>
+	<!--//////////////////  Sign In  /////////////////////-->                          <!-- Used code from http://getbootstrap.com/examples/signin/ -->
+	<div class = "container">
+		<form class ='form-signin'>
+			<h2 class='form-signin-heading'>Sign In!</h2>
+			<label for='inputEmail' class='sr-only'>Email address</label>
+			<input type='email' id='inputEmail' class='form-control' placeholder='Email Address' required autofocus>
+			<label for='inputPassword' class='sr-only'>Password</label>
+			<input type='password' id='inputPassword' class='form-control' placeholder='Password' required>
+			<div class='checkbox'>
+				<label>
+					<input type='checkbox' value='remember-me'>
+					Remember me
+				</label>
+			</div>
+			<button class='btn btn-lg btn-primary btn-block' type='submit'>Sign In</button>
 		</form>
+	</div>
+
+	<div class='container'>
+		<img src='img/or.png' alt='image with circle shape' class='img-circle' id='or'>
+	</div>
+
+	<!--//////////////////  Registration  /////////////////-->
 	<div id = "registration" style="margin-top:150">
 		<form action="" id="" method="post" onsubmit="return ValidateForm(this);">
 			<h1 style="text-align:center">Registration</h1>
